# melody_mini

./: CMakeLists.txt  apimanager.cpp  apimanager.h  main.cpp  playlistmanager.cpp  playlistmanager.h  widget.cpp  widget.h
resources/: resources.qrc
src/: main.cpp
src/core/: apimanager.h  playlistmanager.h
src/ui/: widget.cpp  widget.h
